--- a/src/components/zen-table-row/zen-table-row.scss
+++ b/src/components/zen-table-row/zen-table-row.scss
@@ -11,7 +11,6 @@ $select-transition: 0.5s;
   border-right: 1px solid $color-white;
   position: relative;
   transform: scale(1); // hack to apply position relative (tested in chrome & ff)
-  transition: border $select-transition;
 }
 
 :host(.hidden) {
@@ -19,7 +18,6 @@ $select-transition: 0.5s;
 }
 
 :host(.selected) {
-  background: $color-blue-50;
   border: 1px solid $color-blue-700 !important;
 }
 
@@ -36,16 +34,18 @@ $select-transition: 0.5s;
   transition: transform $expand-icon-transition;
 }
 
-.expanded {
-  .expand-icon {
-    transform: rotate(90deg);
-  }
+.expanded .expand-icon {
+  transform: rotate(90deg);
 }
 
-:host(.expanded) {
-  .expand-icon {
-    transform: rotate(90deg);
-  }
+:host(.expanded) .expand-icon {
+  transform: rotate(90deg);
+}
+
+.expanded ::slotted(*),
+:host(.selected) ::slotted(*),
+:host(.expanded) ::slotted(*) {
+  background-color: $color-blue-50;
 }
 
 .widgets {
